// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App/Pages/Toutes Les Collectivites/Multi Select Checkboxes Selection Multiple 1`] = `
<ul>
  <div>
    <div
      className="font-semibold text-md mb-2"
    >
      Niveau de labellisation
    </div>
    <div
      className="small-checkbox  fr-checkbox-group text-sm"
    >
      <div
        className="my-2"
      >
        <input
          checked={false}
          className="fr-toggle__input"
          disabled={true}
          id="1f1a6fcf-1bcc-4428-a225-7affd095fb8aall"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="1f1a6fcf-1bcc-4428-a225-7affd095fb8aall"
        >
          Tous
        </label>
      </div>
      <div
        className="my-2"
      >
        <input
          checked={true}
          className="fr-toggle__input"
          disabled={false}
          id="1f1a6fcf-1bcc-4428-a225-7affd095fb8aNL"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="1f1a6fcf-1bcc-4428-a225-7affd095fb8aNL"
        >
          Non labellisé
        </label>
      </div>
      <div
        className="my-2"
      >
        <input
          checked={true}
          className="fr-toggle__input"
          disabled={false}
          id="1f1a6fcf-1bcc-4428-a225-7affd095fb8a1"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="1f1a6fcf-1bcc-4428-a225-7affd095fb8a1"
        >
          Première étoile
        </label>
      </div>
      <div
        className="my-2"
      >
        <input
          checked={false}
          className="fr-toggle__input"
          disabled={false}
          id="1f1a6fcf-1bcc-4428-a225-7affd095fb8a2"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="1f1a6fcf-1bcc-4428-a225-7affd095fb8a2"
        >
          Deuxième étoile
        </label>
      </div>
      <div
        className="my-2"
      >
        <input
          checked={false}
          className="fr-toggle__input"
          disabled={false}
          id="1f1a6fcf-1bcc-4428-a225-7affd095fb8a3"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="1f1a6fcf-1bcc-4428-a225-7affd095fb8a3"
        >
          Troisième étoile
        </label>
      </div>
      <div
        className="my-2"
      >
        <input
          checked={false}
          className="fr-toggle__input"
          disabled={false}
          id="1f1a6fcf-1bcc-4428-a225-7affd095fb8a4"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="1f1a6fcf-1bcc-4428-a225-7affd095fb8a4"
        >
          Quatrième étoile
        </label>
      </div>
      <div
        className="my-2"
      >
        <input
          checked={false}
          className="fr-toggle__input"
          disabled={false}
          id="1f1a6fcf-1bcc-4428-a225-7affd095fb8a5"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="1f1a6fcf-1bcc-4428-a225-7affd095fb8a5"
        >
          Cinquième étoile
        </label>
      </div>
    </div>
  </div>
</ul>
`;

exports[`Storyshots App/Pages/Toutes Les Collectivites/Multi Select Checkboxes Selection Tous Par Defaut 1`] = `
<ul>
  <div>
    <div
      className="font-semibold text-md mb-2"
    >
      Niveau de labellisation
    </div>
    <div
      className="small-checkbox  fr-checkbox-group text-sm"
    >
      <div
        className="my-2"
      >
        <input
          checked={true}
          className="fr-toggle__input"
          disabled={true}
          id="d86b59b4-cb2f-4cfd-958a-8c23937d87e4all"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="d86b59b4-cb2f-4cfd-958a-8c23937d87e4all"
        >
          Tous
        </label>
      </div>
      <div
        className="my-2"
      >
        <input
          checked={false}
          className="fr-toggle__input"
          disabled={false}
          id="d86b59b4-cb2f-4cfd-958a-8c23937d87e4NL"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="d86b59b4-cb2f-4cfd-958a-8c23937d87e4NL"
        >
          Non labellisé
        </label>
      </div>
      <div
        className="my-2"
      >
        <input
          checked={false}
          className="fr-toggle__input"
          disabled={false}
          id="d86b59b4-cb2f-4cfd-958a-8c23937d87e41"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="d86b59b4-cb2f-4cfd-958a-8c23937d87e41"
        >
          Première étoile
        </label>
      </div>
      <div
        className="my-2"
      >
        <input
          checked={false}
          className="fr-toggle__input"
          disabled={false}
          id="d86b59b4-cb2f-4cfd-958a-8c23937d87e42"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="d86b59b4-cb2f-4cfd-958a-8c23937d87e42"
        >
          Deuxième étoile
        </label>
      </div>
      <div
        className="my-2"
      >
        <input
          checked={false}
          className="fr-toggle__input"
          disabled={false}
          id="d86b59b4-cb2f-4cfd-958a-8c23937d87e43"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="d86b59b4-cb2f-4cfd-958a-8c23937d87e43"
        >
          Troisième étoile
        </label>
      </div>
      <div
        className="my-2"
      >
        <input
          checked={false}
          className="fr-toggle__input"
          disabled={false}
          id="d86b59b4-cb2f-4cfd-958a-8c23937d87e44"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="d86b59b4-cb2f-4cfd-958a-8c23937d87e44"
        >
          Quatrième étoile
        </label>
      </div>
      <div
        className="my-2"
      >
        <input
          checked={false}
          className="fr-toggle__input"
          disabled={false}
          id="d86b59b4-cb2f-4cfd-958a-8c23937d87e45"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="d86b59b4-cb2f-4cfd-958a-8c23937d87e45"
        >
          Cinquième étoile
        </label>
      </div>
    </div>
  </div>
</ul>
`;
